--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,35 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>
-      Ionic Blank
+      Calculadora
     </ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only color="light" (click)="goToLog()">
+        <ion-icon name="timer"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+
+  <ion-item>
+    <ion-label floating>Numero 1</ion-label>
+    <ion-input [(ngModel)]="num1" type="number" name="num1"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label floating>Numero 2</ion-label>
+    <ion-input [(ngModel)]="num2" type="number" name="num2"></ion-input>
+  </ion-item>
+
+  <ion-row margin-top>
+    <button (click)="operar(0)" ion-col col-2 ion-button block color="secondary">Sum</button>
+    <button (click)="operar(1)" ion-col col-2 offset-1 ion-button block color="secondary">Res</button>
+    <button (click)="operar(2)" ion-col col-2 offset-1 ion-button block color="secondary">Mul</button>
+    <button (click)="operar(3)" ion-col col-2 offset-1 ion-button block color="secondary">Div</button>
+  </ion-row>
+
+  <h1>{{res}}</h1>
+
 </ion-content>
